Fix for Creator name and Creation time not visible in dark mode

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -1082,11 +1082,11 @@ button {
     .app-list {
       .app-card {
         .app-creation-time {
-          color: #61656f;
+          color: #d1d8eb;
         }
 
         .app-creator {
-          color: #7c86a1;
+          color: #c0d2ff;
         }
       }
 
